# go-genproto

./: BUILD.bazel  README.md  go.mod  go.sum
_public/: index.html
meta/reference/v1beta1/: BUILD.bazel  reference.pb.go
service/control/service-routing/v1beta1/: BUILD.bazel  service_routing.pb.go  service_routing_grpc.pb.go
service/data/interface/mailgun-interface/v1beta1/: BUILD.bazel  mailgun_interface_service.pb.go  mailgun_interface_service_grpc.pb.go
service/data/utility/idempotency/v1beta1/: BUILD.bazel  idempotency_service.pb.go  idempotency_service_grpc.pb.go
type/meta/reference/v1beta1/: BUILD.bazel  reference.pb.go
type/meta/reference/v1beta2/: BUILD.bazel  reference.pb.go
type/meta/reference/v1beta3/: BUILD.bazel  reference.pb.go
type/nonce/v1beta1/: BUILD.bazel  nonce.pb.go
