load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "idempotency_service.pb.go",
        "idempotency_service_grpc.pb.go",
    ],
    importpath = "go.innovationupstream.dev/genproto/service/data/utility/idempotency/v1beta1",
    visibility = ["//visibility:public"],
    deps = [
        "//type/nonce/v1beta1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
    ],
)
